# BigDeal

./: .gitignore  setup.sh
src/: CMakeLists.txt
